2005-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* GroupsConfig.pm, Users/Groups.pm: removed id from the group struct
	* ShellsConfig.pm: removed, has been moved to UsersConfig, didn't have
	much sense as a separate object.
	* Loader.pl.in: removed ShellsConfig.pm
	* UsersConfig.pm, Users/Users.pm: removed id from the user struct, 
	added shells array here
	* Users/Groups.pm, Users/Users.pm: made the code for
	adding/deleting/modifying users/groups a bit more readable
	* Utils/Monitor.pm: initilize correctly the file monitor if Gamin is
	present

2005-11-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* HostsConfig.pm: really add a "set" dbus method

2005-11-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Utils/Monitor.pm: make use of gamin optional, thus not spreading the
	"changed" signals if it isn't installed

2005-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* IfacesConfig.pm: added, DBus object to handle network ifaces config
	* Network/Ifaces.pm: added again, at the moment there's only
	get() support
	* Loader.pl.in: added the IfacesConfig object
	* Shares/SMB.pm (get): fixed a typo with $smb_conf_file
	* Utils/Monitor.pm: use the recently uploaded Sys::Gamin CPAN perl
	module
	* Utils/Parse.pm (expand): allow expanding of several keywords.
	(get_ppp_options_re): added.

2005-11-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Init/Services.pm: added missing set() support for the rest of the
	init systems

2005-11-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ServicesConfig.pm, Init/Services.pm: began to add set() support, at
	the moment it's working for sysV, the rest is to come.
	* Init/Services.pm: fixed get() for systems distinct to sysV, should
	work fine now.

2005-10-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* NFSConfig.pm, Shares/NFS.pm: added set() methods.
	* SMBConfig.pm, Shares/SMB.pm: ditto
	* Utils/File.pm (open_filter_write_from_names): small fix when the
	output stream can't be opened
	* TODO: updated
